# openai-voicechat

./: .gitignore  LICENSE  README.md  setup.cfg
src/speech_to_gpt/: api_calls.py  audio.py  cli.py
