[metadata]
name = speech_to_gpt
author = Shantanu Sanyal
author_email = sanyalster@gmail.com
summary = A simple chatGPT project
description_file = README.md
home_page = https://github.com/
requires_dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
package_dir = 
    =src
packages = find:
install_requires = 
    openai
    flask
    pyaudio
    keyboard
    wave
    python-dotenv
    gtts
    playsound
    click
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest

[options.extras_require]
dev =
    pytest
    pylint
    Sphinx
    wheel

[options.packages.find]
exclude = tests

[build_sphinx]
project = speech_to_gpt project
copyright = Copyright 2023 Shantanu Sanyal
config_dir = docs

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    chat-with-gpt = speech_to_gpt.cli:main